# core-arduino-project

./: CMakeLists.txt  README.md
AddressSelectorTest/: AddressSelectorTest.ino
AudioMatrix/: AudioMatrix.ino  AudioMatrix.ino~
AudioMatrixFirmware/: AudioMatrixFirmware.ino  AudioMatrixFirmware.sublime-workspace  platformio.ini
AudioMatrixFirmware/AudioMatrixFirmware/: AudioMatrixFirmware.sublime-workspace
Core/: Core.ino
CoreFirmware/: CoreFirmware.ino  platformio.ini
CoreFirmware/CoreFirmware/: CoreFirmware.ino
DigiPotTest/: DigiPotTest.ino
Module/: ConfigParser.h  EffectParameter.h  ICs.h  MIDIMapper.h  MIDIMapperCCMap.h  Module.ino  ModuleIC.h  ModuleICAD8430.h  ModuleICFactory.h  ModuleICList.h  ModuleICRegistry.h  ModuleProcessor.h  module-config.json
ModuleFirmware/: AD8430.h  ATmega328PWM.h  ConfigParser.cpp  ConfigParser.h  Module.cpp  Module.h  ModuleEffect.cpp  ModuleEffect.h  ModuleEffectParameter.h  ModuleEffectParameterHardwareBinding.h  ModuleEffectRegistry.cpp  ModuleEffectRegistry.h  ModuleFirmware.ino  ModuleFirmware.sublime-project  ModuleFirmware.sublime-workspace  ModuleHardwareMapper.cpp  ModuleHardwareMapper.h  ModuleHardwareMapperItem.cpp  ModuleHardwareMapperItem.h  ModuleIC.cpp  ModuleIC.h  ModuleICFactory.cpp  ModuleICFactory.h  ModuleICRegistry.cpp  ModuleICRegistry.h  ModuleMIDIMapper.h  ModuleMIDIMapperItem.h  TestJSONConfig.h  platformio.ini
ModuleFirmware/ModuleFirmware/: ATmega328PWM.h  ConfigParser.h  ModuleEffect.h  ModuleFirmware.sublime-workspace  TestJSONConfig.h  (+2 more)
PWMTester/: PWMTester.ino
VCATester/: VCATester.ino
(+92 files in other folders)
